--- a/index.html
+++ b/index.html
@@ -5,26 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Commission Info</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
+        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap');
+        
+        * {
             margin: 0;
             padding: 0;
+            box-sizing: border-box;
+            font-family: 'Inter', sans-serif;
+        }
+        body {
+            background-color: #121212;
+            color: #fff;
             text-align: center;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            padding: 20px;
         }
         .container {
-            max-width: 800px;
-            margin: 50px auto;
-            background: white;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            max-width: 600px;
+            background: rgba(255, 255, 255, 0.1);
+            padding: 30px;
+            border-radius: 12px;
+            backdrop-filter: blur(10px);
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
         }
         h1, h2 {
-            color: #333;
+            font-weight: 600;
         }
         .section {
-            margin-bottom: 20px;
+            margin: 20px 0;
         }
         ul {
             list-style: none;
@@ -32,10 +43,19 @@
         }
         li {
             margin: 5px 0;
+            font-weight: 300;
         }
         .contact {
             margin-top: 20px;
-            font-weight: bold;
+            font-weight: 400;
+        }
+        a {
+            color: #ffcc66;
+            text-decoration: none;
+            font-weight: 600;
+        }
+        a:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
@@ -89,7 +109,7 @@
 
         <div class="section">
             <h2>How to Order</h2>
-            <p>Message me on <strong>Instagram</strong> or fill out a <strong>Google form</strong>.</p>
+            <p>Message me on <a href="#">Instagram</a> or fill out a <a href="#">Google form</a>.</p>
         </div>
 
         <div class="contact">
