--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Commission Info</title>
+    <title>COMMISSION INFO</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap');
         
@@ -12,6 +12,7 @@
             padding: 0;
             box-sizing: border-box;
             font-family: 'Inter', sans-serif;
+            text-transform: uppercase;
         }
         body {
             background-color: #121212;
@@ -61,59 +62,59 @@
 </head>
 <body>
     <div class="container">
-        <h1>Commission Info</h1>
-        <p>Hey! If you're interested in commissioning me, here’s everything you need to know.</p>
+        <h1>COMMISSION INFO</h1>
+        <p>HEY! IF YOU'RE INTERESTED IN COMMISSIONING ME, HERE’S EVERYTHING YOU NEED TO KNOW.</p>
 
         <div class="section">
-            <h2>What I Can Do</h2>
+            <h2>WHAT I CAN DO</h2>
             <ul>
-                <li>Video edits (with optional animations)</li>
-                <li>Standalone animations</li>
+                <li>VIDEO EDITS (WITH OPTIONAL ANIMATIONS)</li>
+                <li>STANDALONE ANIMATIONS</li>
             </ul>
         </div>
 
         <div class="section">
-            <h2>Payment</h2>
-            <p>I accept Kaspi, MBank, Elsom (Central Asia), Payoneer, Patreon, Boosty.</p>
-            <p>Payment can be made before or after completion.</p>
+            <h2>PAYMENT</h2>
+            <p>I ACCEPT KASPI, MBANK, ELSOM (CENTRAL ASIA), PAYONEER, PATREON, BOOSTY.</p>
+            <p>PAYMENT CAN BE MADE BEFORE OR AFTER COMPLETION.</p>
         </div>
 
         <div class="section">
-            <h2>What You'll Need to Provide</h2>
+            <h2>WHAT YOU'LL NEED TO PROVIDE</h2>
             <ul>
-                <li>A general idea + audio for the edit</li>
-                <li>High-quality images or footage</li>
+                <li>A GENERAL IDEA + AUDIO FOR THE EDIT</li>
+                <li>HIGH-QUALITY IMAGES OR FOOTAGE</li>
             </ul>
         </div>
 
         <div class="section">
-            <h2>What I Don't Edit</h2>
+            <h2>WHAT I DON'T EDIT</h2>
             <ul>
-                <li>Real people or video clips</li>
-                <li>Fanart that’s not allowed to be used</li>
-                <li>Copyrighted video content</li>
+                <li>REAL PEOPLE OR VIDEO CLIPS</li>
+                <li>FANART THAT’S NOT ALLOWED TO BE USED</li>
+                <li>COPYRIGHTED VIDEO CONTENT</li>
             </ul>
         </div>
 
         <div class="section">
-            <h2>Prices</h2>
-            <h3>Video Edits</h3>
-            <p>Start at <strong>$30</strong>. First-time commission? I’ll add a small animation for free.</p>
-            <h3>Animations</h3>
+            <h2>PRICES</h2>
+            <h3>VIDEO EDITS</h3>
+            <p>START AT <strong>$30</strong>. FIRST-TIME COMMISSION? I’LL ADD A SMALL ANIMATION FOR FREE.</p>
+            <h3>ANIMATIONS</h3>
             <ul>
-                <li>Head animation – $15</li>
-                <li>Half-body animation – $40</li>
-                <li>Full-body animation – $50</li>
+                <li>HEAD ANIMATION – $15</li>
+                <li>HALF-BODY ANIMATION – $40</li>
+                <li>FULL-BODY ANIMATION – $50</li>
             </ul>
         </div>
 
         <div class="section">
-            <h2>How to Order</h2>
-            <p>Message me on <a href="#">Instagram</a> or fill out a <a href="#">Google form</a>.</p>
+            <h2>HOW TO ORDER</h2>
+            <p>MESSAGE ME ON <a href="https://www.instagram.com/vonvelt/" target="_blank">INSTAGRAM</a> OR FILL OUT A <a href="#">GOOGLE FORM</a>.</p>
         </div>
 
         <div class="contact">
-            <p>Got questions? Just ask!</p>
+            <p>GOT QUESTIONS? JUST ASK!</p>
         </div>
     </div>
 </body>
