--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
             <h2>WHAT I CAN DO</h2>
             <ul>
                 <li>VIDEO EDITS (WITH OPTIONAL ANIMATIONS)</li>
-                <li>STANDALONE ANIMATIONS</li>
+                <li>ANIMATIONS</li>
             </ul>
         </div>
 
         <div class="section">
             <h2>PAYMENT</h2>
-            <p>I ACCEPT KASPI, MBANK, ELSOM (CENTRAL ASIA), PAYONEER, PATREON, BOOSTY.</p>
+            <p>I ACCEPT KASPI, PAYONEER, PATREON, BOOSTY.</p>
             <p>PAYMENT CAN BE MADE BEFORE OR AFTER COMPLETION.</p>
         </div>
 
@@ -90,8 +90,7 @@
         <div class="section">
             <h2>WHAT I DON'T EDIT</h2>
             <ul>
-                <li>REAL PEOPLE OR VIDEO CLIPS</li>
-                <li>FANART THAT’S NOT ALLOWED TO BE USED</li>
+                                <li>FANART THAT’S NOT ALLOWED TO BE USED</li>
                 <li>COPYRIGHTED VIDEO CONTENT</li>
             </ul>
         </div>
